--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,17 @@
   },
   "homepage": "https://github.com/silveridev/ale-ecommerce#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
-    "mongoose": "^5.0.14"
+    "ejs": "^2.5.9",
+    "ejs-mate": "^2.3.0",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mongoose": "^5.0.16",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.5"
   }
 }
