--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "Course project.",
   "main": "server.js",
+  "engines": {
+    "npm": "5.6.x",
+    "yarn": "1.5.x",
+    "node": "8.11.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "yarn install"
   },
   "repository": {
     "type": "git",
