--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,15 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-        "indent": [
-            "error",
-            "tab"
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "no-console": ["warn", { "allow": ["info", "error"] }],
-        "no-unused-vars":"warn"
-    }
+	"env": {
+		"browser": true,
+		"commonjs": true,
+		"es6": true,
+		"node": true
+	},
+	"extends": "eslint:recommended",
+	"rules": {
+		"indent": ["error", "tab"],
+		"linebreak-style": ["error", "unix"],
+		"no-console": ["warn", { "allow": ["info", "error"] }],
+		"no-unused-vars": "error"
+	}
 }
