--- a/package.json
+++ b/package.json
@@ -1,46 +1,53 @@
 {
-  "name": "ale-ecommerce",
-  "version": "1.0.0",
-  "description": "Course project.",
-  "main": "server.js",
-  "engines": {
-    "npm": "5.6.x",
-    "yarn": "1.5.x",
-    "node": "8.11.x"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "heroku-postbuild": "yarn install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/silveridev/ale-ecommerce.git"
-  },
-  "keywords": [
-    "Ecommerce",
-    "nodejs",
-    "reactjs"
-  ],
-  "author": "Alessandro Silveri",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/silveridev/ale-ecommerce/issues"
-  },
-  "homepage": "https://github.com/silveridev/ale-ecommerce#readme",
-  "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.18.2",
-    "ejs": "^2.5.9",
-    "ejs-mate": "^2.3.0",
-    "express": "^4.16.3",
-    "lodash": "^4.17.10",
-    "mongoose": "^5.0.16",
-    "morgan": "^1.9.0",
-    "nodemon": "^1.17.3"
-  },
-  "devDependencies": {
-    "jshint": "^2.9.5"
-  }
+	"name": "ale-ecommerce",
+	"version": "1.0.0",
+	"description": "Course project.",
+	"main": "server.js",
+	"engines": {
+		"npm": "5.6.x",
+		"yarn": "1.5.x",
+		"node": "8.11.x"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js",
+		"dev": "nodemon server.js",
+		"heroku-postbuild": "yarn install"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/silveridev/ale-ecommerce.git"
+	},
+	"keywords": [
+		"Ecommerce",
+		"nodejs",
+		"reactjs"
+	],
+	"author": "Alessandro Silveri",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/silveridev/ale-ecommerce/issues"
+	},
+	"homepage": "https://github.com/silveridev/ale-ecommerce#readme",
+	"dependencies": {
+		"bcrypt-nodejs": "^0.0.3",
+		"body-parser": "^1.18.2",
+		"connect-mongo": "^2.0.1",
+		"cookie-parser": "^1.4.3",
+		"crypto": "^1.0.1",
+		"ejs": "^2.5.9",
+		"ejs-mate": "^2.3.0",
+		"express": "^4.16.3",
+		"express-flash": "^0.0.2",
+		"express-session": "^1.15.6",
+		"lodash": "^4.17.10",
+		"mongoose": "^5.0.16",
+		"morgan": "^1.9.0",
+		"nodemon": "^1.17.3",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0"
+	},
+	"devDependencies": {
+		"jshint": "^2.9.5"
+	}
 }
