--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"homepage": "https://github.com/silveridev/ale-ecommerce#readme",
 	"dependencies": {
+		"async": "^2.6.0",
 		"bcrypt-nodejs": "^0.0.3",
 		"body-parser": "^1.18.2",
 		"connect-mongo": "^2.0.1",
@@ -40,6 +41,7 @@
 		"express": "^4.16.3",
 		"express-flash": "^0.0.2",
 		"express-session": "^1.15.6",
+		"faker": "^4.1.0",
 		"lodash": "^4.17.10",
 		"mongoose": "^5.0.16",
 		"morgan": "^1.9.0",
