payment was added

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"express-session": "^1.15.6",
 		"faker": "^4.1.0",
 		"lodash": "^4.17.10",
+		"moment": "^2.22.1",
 		"mongoose": "^5.0.16",
 		"morgan": "^1.9.0",
 		"nodemon": "^1.17.3",
