--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"moment": "^2.22.1",
 		"mongoose": "^5.0.16",
 		"morgan": "^1.9.0",
+		"nodemailer": "^4.6.4",
 		"nodemon": "^1.17.3",
 		"passport": "^0.4.0",
 		"passport-local": "^1.0.0",
